feat: [CHK-2982] Added tracing for queue messages (#26)
* added tracing for queue messages

* added tracing for queue messages

* improved tracing context

* improving trace

* bump spring boot and azure deps

* added missing lock and metadata

* fix verification-metadata.xml

* fix dockerfile

* fix child mono spans

* fix verification-metadata.xml